--- a/advanceJS/index.html
+++ b/advanceJS/index.html
@@ -31,6 +31,6 @@
 </head>
 <body>
     <button id="btn"> Click Me </button>
-    <script src="recursion.js"></script>
+    <script src="memoize.js"></script>
 </body>
 </html>
